--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babylonjs/core": "^4.1.0",
+    "@babylonjs/gui": "^4.1.0",
+    "@babylonjs/loaders": "^4.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -13,10 +16,13 @@
     "@types/react-dom": "^16.9.8",
     "@types/socket.io": "^2.1.11",
     "@types/socket.io-client": "^1.4.33",
+    "babylonjs": "^4.1.0",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "react": "^16.13.1",
+    "react-babylonjs": "^2.2.7",
     "react-dom": "^16.13.1",
+    "react-reconciler": "^0.25.1",
     "react-scripts": "3.4.3",
     "socket.io": "^2.3.0",
     "ts-node": "^9.0.0",
