--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,22 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "strictPropertyInitialization": false,
-    "experimentalDecorators": true,
-    "jsx": "react",
-    "noEmit": true
-  },
-  "include": [
-    "src",
-  ],
-  "types": [
-    "babylonjs",
-  ],
+    "compilerOptions": {
+        "target": "es5",
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "allowJs": true,
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "strict": true,
+        "forceConsistentCasingInFileNames": true,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "strictPropertyInitialization": false,
+        "experimentalDecorators": true,
+        "jsx": "react",
+        "noEmit": true
+    },
+    "include": ["src"],
+    "types": ["babylonjs"]
 }
