Tree generator, prettier

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "server-start": "ts-node --transpile-only --project ./tsconfig.json ./server/index.ts",
         "server-develop": "onchange -i -k \"{src,server,public,scripts}/**/*.{ts,tsx,js,jsx,html,css}\" -- npm run start",
         "frontend-develop": "cross-env PORT=9976 react-scripts start",
-        "prettier": "prettier --config .prettierrc --write \"src/**/*.{js,ts,tsx,json,css}\" \"*.json\"",
+        "prettier": "prettier --config .prettierrc --write \"{src,server,public,scripts}/**/*.{js,ts,tsx,json,css}\" \"*.json\"",
         "prettier-watch": "onchange \"{src,server,public,scripts}/**/*.{ts,tsx,js,jsx,html,css}\" -- prettier --config .prettierrc --write \"{{changed}}\"",
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
