--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
     "singleQuote": true,
     "trailingComma": "all",
     "arrowParens": "always",
-    "printWidth": 120
+    "printWidth": 120,
+    "endOfLine": "crlf"
 }
