--- a/src/backend/tsconfig.json
+++ b/src/backend/tsconfig.json
@@ -17,11 +17,9 @@
         "strictNullChecks": true,
         "suppressImplicitAnyIndexErrors": true,
         "noUnusedLocals": false,
-        "esModuleInterop":true,
+        "esModuleInterop": true,
         "experimentalDecorators": true,
-        "emitDecoratorMetadata":true
+        "emitDecoratorMetadata": true
     },
-    "exclude": [
-        "node_modules"
-    ]
+    "exclude": ["node_modules", "src/frontend"]
 }
