--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@testing-library/user-event": "^7.2.1",
         "@types/express": "^4.17.8",
         "@types/jest": "^26.0.14",
+        "@types/md5": "^2.2.0",
         "@types/node": "^14.11.1",
         "@types/react": "^16.9.49",
         "@types/react-dom": "^16.9.8",
@@ -20,6 +21,7 @@
         "babylonjs": "^4.1.0",
         "cross-env": "^7.0.2",
         "express": "^4.17.1",
+        "md5": "^2.3.0",
         "react": "^16.13.1",
         "react-babylonjs": "^2.2.7",
         "react-dom": "^16.13.1",
